b=586938; missing VIEWPORT property on WebGL context; r=mrbkap,a=b